--- a/HTML/main.html
+++ b/HTML/main.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AD Michael Kors PopUp </title>
-    <link rel=""stylesheet" href="/static/css/style.css">
-    <script src="/static/js/script.js" defer></script>
+    <link rel="stylesheet" href="/CSS/style.css">
+    <script src="/js/script.js" defer></script>
  </head>
  <body>
     <header>
@@ -16,21 +16,51 @@
             <a href="cart.html">Shopping Cart</a>
         </nav>
     </header>
-    
+
     <main>
         <section id="product-list">
             <h2> Our Collection</h2>
             <h4> Limited Time Only!</h4>
             <div id="Products">
-                <!-- we will implement these products using JavaScript -->
+                <div class="product card">
+                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32F4G8EW6B-1092_1?$large$" alt="Empire Medium Metallic Chain-Link Pochette"
+                    <h3> Empire Medium Metallic Chain-Link Pochette</h3>
+                    <p class="description"> Black/Pale Gold</p>
+                    <p class="price">$198</p>
+                </div>
+                <div class="product card">
+                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/30F4GETS2B-1335_1?$large$" alt="Scarlett Medium Signature Logo Satchel"
+                    <h3>Scarlett Medium Signature Logo Satchel</h3>
+                    <p class="description"> Brown/Acorn </p>
+                    <p class="price">$298</p>
+                </div>
+                <div class="product card">
+                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/30S2G6AS2U-2158_1?$large$" alt="Marilyn Medium Logo Stripe Satchel"
+                    <h3>Marilyn Medium Logo Stripe Satchel </h3>
+                    <p class="description"> Brown/Soft Pink/Fawn </p>
+                    <p class="price">$298</p>
+                </div>
+                <div class="product card">
+                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32H1GT9C1B-1335_1?$large$" alt="Jet Set Charm Small Logo Pochette"
+                    <h3>Jet Set Charm Small Logo Pochette </h3>
+                    <p class="description"> Brown/Acorn </p>
+                    <p class="price">$198</p>
+                </div>
+                <div class="product card">
+                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/30F9G07U4B-1335_1?$large$" alt="Bedford Travel Extra-Large Signature Logo Stripe Weekender Bag"
+                    <h3>Bedford Travel Extra-Large Signature Logo Stripe Weekender Bag </h3>
+                    <p class="description"> Brown/Acorn </p>
+                    <p class="price">$398</p>
+                </div>
+                
             </div>
         </section>
 
-        <aside id="Cart-Summary">
+        <section id="Cart-Summary">
             <h3> Shopping Cart</h3>
             <p>Total: $<span id="Cart-Total">0.00</span></p>
             <a href="cart.html"> Go to Cart </a>
-        </aside>
+        </section>
     </main>
 
     <footer>
