--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MK Shopping Cart</title>
-    <link rel="stylesheet" href="/static/css/style.css">
-    <script src="/static/js/cart.js" defer></script>
+    <link rel="stylesheet" href="/CSS/style.css">
+    <script src="/JS/script.js" defer></script>
 </head>
 <body>
     <header>
@@ -18,16 +18,17 @@
 
     <main>
         <section id="Cart-Items">
+            <div id="Cart-Summary">
             <h2>Your Cart</h2>
             <ul id="Cart-List">
                 <!-- Cart items will be placed here -->
             </ul>
-            <p>Total: $<span id="Cart-Total">0.00</span></p>
+            <p id="cart-total"> Total: $0.00 </p>
         </section>
     </main>
 
     <footer>
-        <p>$copy; 2024 Michael Kors Popup</p>
+        <p>&copy; 2024 Michael Kors Popup</p>
     </footer>
     
 </body>
